--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html> 
-<html> 
-<body> 
-
-<video width="100%" height="400" controls>
-  <source src="https://drive.google.com/uc?export=download&id=1A-S0Lg3PPaNxHrwW2WnlzhUVURpKsdwU" type="video/mp4">
-  Your browser does not support HTML5 video.
-</video>
-
-<p>Progress Order Pesawat</p>
-
-</body> 
+<html>
+    <head>
+        <title>Hanif Developer</title>
+    </head>
+    <body>
+        <h1>Welcome, Hanif Site</h1>
+    </body>
 </html>
