--- a/video.html
+++ b/video.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html> 
 <html> 
+  <head>
+    <meta name="author" content="Anggoro Triantoko (Dinkominfo Kota Pekalongan)" />
+    <meta name="keywords" content="Kuliner" />
+    <meta property="og:image" content="https://pekalongankota.go.id/upload/berita/berita_20200310102750.jpeg" />
+    <meta property="og:title" content="Laporan Progress Order Tiket Pesawat" />
+    <meta property="og:url" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:type" content="video" />
+    <meta property="og:image:secure_url" content="https://pekalongankota.go.id/upload/berita/berita_20200310102750.jpeg" />
+    <meta property="og:image:type" content="video/mp4" />
+  </head>
 <body> 
 
 <video width="100%" height="400" controls>
@@ -7,10 +18,7 @@
   Your browser does not support HTML5 video.
 </video>
 
-<p>
-Video courtesy of 
-<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
-</p>
+<p>Order Tiket Pesawat</p>
 
 </body> 
 </html>
